# tiles-image-encoder

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: Configure.hpp  TilesEncoder.cpp  TilesEncoder.hpp
src/jpeg/: BitWriter.cpp  BitWriter.hpp  Jpeg.inl  JpegEncoder.cpp  JpegEncoder.hpp
web/: package-lock.json  package.json  package.lib.json  tsconfig.json  vite.config.js
web/demo/: index.html  index.js  tilesimageencoder.wasm
web/script/: build.sh
web/src/: Configure.ts  TilesImageEncoder.ts  index.ts  vite.config.js
web/src/bridge/: EncoderBinder.cpp  MemoryFile.cpp  MemoryFile.hpp
web/src/wasm/: tilesimageencoder.js  tilesimageencoder.wasm
